fixed broken css.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 /************** TAG SELECTOR **************/
-
 a {
   color: #11999e;
   text-decoration: none;
@@ -10,19 +9,14 @@ body {
   text-align: center;
   color: #40514E;
   font-family: 'Merriweather', serif;
-
 }
 
 /** <!-- 100% = 16px  90px/16px = 562.5%  5.625em--> <!-- 16px = 100% = 1em --> **/
-
 h1 {
   color: #66bfbf;
   font-size: 5.625rem;
   font-family: 'Sacramento', cursive;
-  line-height: 2;
   margin: 50px auto 0 auto;
-
-
 }
 
 h2 {
@@ -30,9 +24,6 @@ h2 {
   font-family: 'Montserrat', sans-serif;
   font-size: 2.5rem;
   font-weight: bold;
-
-
-
 }
 
 h3 {
@@ -47,14 +38,8 @@ hr {
   width: 5%;
 }
 
-
 p {
   line-height: 2;
-}
-
-
-.table{
-  width: 100%;
 }
 
 td {
@@ -62,9 +47,7 @@ td {
   line-height: 2;
 }
 
-
 /************** CLASS SELECTOR **************/
-
 .btn {
   background: #11cdd4;
   background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
@@ -75,7 +58,7 @@ td {
   -webkit-border-radius: 8;
   -moz-border-radius: 8;
   border-radius: 8px;
-  font-family: Arial;
+  font-family: 'Montserrat', sans-serif;
   color: #ffffff;
   font-size: 20px;
   padding: 10px 20px 10px 20px;
@@ -100,26 +83,21 @@ td {
 
 .bottom-container {
   background-color: #66BFBF;
-  padding: 50px;
-  margin-top: 100px;
+  padding: 50px 0 20px;
 }
 
-.copywrite-line{
+.copywrite-line {
   color: #EAF6F6;
+  font-size: 0.75rem;
+  padding: 20px 0;
 }
 
-.contact-me{
-
-  line-height: 2;
-
-}
-
-.contact-message{
+.contact-message {
   width: 40%;
   margin: 40px auto;
 }
-.code-img {
 
+.code-img {
   width: 25%;
   float: left;
   margin-right: 30px;
@@ -128,6 +106,10 @@ td {
 
 .footer-link {
   padding: 0 15px;
+}
+
+.footer-link:hover {
+  color: #EAF6F6;
 }
 
 .intro {
@@ -142,19 +124,21 @@ td {
 .profile {
   margin-bottom: 50px;
 }
+
 .profile-pic {
   border-radius: 200px;
   width: 12.5%;
 }
 
-.resume-section{
+.resume-section {
   width: 40%;
   margin: 40px auto;
 }
 
 .skill-row {
   width: 55%;
-  margin: 100px auto; /* 100px margin for Top & bottom Auto for Left & Right */
+  margin: 100px auto;
+  /* 100px margin for Top & bottom Auto for Left & Right */
   padding: 5px;
   text-align: left;
 }
@@ -174,9 +158,7 @@ td {
 .work-img {
   width: 25%;
   float: right;
-
   margin-bottom: 10px;
-
 }
 
 /************** ID SELECTOR **************/
